@@ -37,9 +37,7 @@
 #	These are the default values that will be overridden by any
 #	explicit values found in /usr/lib/rpm/rpmrc or /etc/rpmrc.
 #
-%_buildarch		Unknown
 %_builddir		%{_topdir}/BUILD
-%_buildos		Linux
 %_bzip2bin		@BZIP2BIN@
 %_dbpath		%{_var}/lib/rpm
 %_defaultdocdir		/usr/doc
@@ -52,6 +50,14 @@
 %_srcrpmdir		%{_topdir}/SRPMS
 %_tmppath		%{_var}/tmp
 %_topdir		%{_usrsrc}/redhat
+
+#==============================================================================
+# ---- rpm per-platform macros.
+#	Per-platform macros.
+%_arch			@RPMCANONARCH@
+%_vendor		@RPMCANONVENDOR@
+%_os			@RPMCANONOS@
+%_target_platform	%{_target_cpu}-%{_vendor}-%{_target_os}
 #
 # XXX use the rpmrc instantiated macro for now
 #%optflags		-O2
@@ -93,10 +99,10 @@
 %_host_vendor		@host_vendor@
 %_host_os		@host_os@
 %_target		%{_host}
-%_target_alias		%{_host_alias)
-%_target_cpu		%{_host_cpu)
-%_target_vendor		%{_host_vendor)
-%_target_os		%{_host_os)
+%_target_alias		%{_host_alias}
+%_target_cpu		%{_host_cpu}
+%_target_vendor		%{_host_vendor}
+%_target_os		%{_host_os}
 
 #==============================================================================
 # ---- specfile macros.
@@ -104,10 +110,10 @@
 #	(Note: Above is the goal, below are the macros under development)
 #
 # The configure macro does the following:
-#	optionally change to a subdirectory.
-#	attempt to update onfig.guess and config.sub.
+#	optionally change to a subdirectory (not implemented).
+#	attempt to update config.guess and config.sub.
 #	run configure with correct prefix, platform, and CFLAGS.
-#	optionally restore current directory.
+#	optionally restore current directory (not implemented).
 # The configure macro should be invoked as %configure (rather than %{configure})
 # because the rest of the arguments will be expanded using %*. Another
 # gotcha is that arguments, if present, should be on the same line as the
@@ -115,4 +121,4 @@
 #
 %configure	\
   %{?__libtoolize:[ -f configure.in ] && %{__libtoolize} --copy --force} \
-  CFLAGS="%{optflags}" ./configure %{_target} --prefix=%{_prefix}
+  CFLAGS="%{optflags}" ../configure %{_target_platform} --prefix=%{_prefix}
